<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:padding="16dp"
	android:layout_width="match_parent" android:layout_height="match_parent">

	<EditText
		android:id="@+id/editTextTitle"
		android:layout_width="0dp"
		android:hint="@string/hint_title"
		android:layout_height="wrap_content"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/editTextTitle"
		android:textSize="16sp"
		android:text="@string/text_level"
		android:layout_marginTop="24dp"
		android:id="@+id/textViewLevel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<RadioGroup
		android:id="@+id/radioGroupLevel"
		android:layout_marginTop="8dp"
		app:layout_goneMarginTop="8dp"
		app:layout_constraintTop_toBottomOf="@id/textViewLevel"
		app:layout_constraintLeft_toLeftOf="parent"
		android:orientation="horizontal"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_width="0dp"
		android:layout_height="wrap_content">

		<RadioButton
			android:id="@+id/radioButton1"
			android:text="@string/level_1"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"/>

		<RadioButton
			android:id="@+id/radioButton2"
			android:text="@string/level_2"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"/>

		<RadioButton
			android:id="@+id/radioButton3"
			android:text="@string/level_3"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"/>

	</RadioGroup>

</android.support.constraint.ConstraintLayout>